; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_opUNLK.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_opUNLK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INSN_GET_REG0 = common dso_local global i32 0, align 4
@current_entry = common dso_local global i32 0, align 4
@reg0 = common dso_local global i32 0, align 4
@FAULT_STATUS_IN_DATA = common dso_local global i32 0, align 4
@FAULT_STATUS_RW_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @opUNLK to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opUNLK(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @INSN_GET_REG0, align 4
  %6 = load i32, i32* @current_entry, align 4
  %7 = load i32, i32* @reg0, align 4
  %8 = add nsw i32 8, %7
  %9 = mul nsw i32 %8, 4
  %10 = call i32 @JIT_EMIT_GET_OP1_REGISTER(i32 %6, i32 %9)
  %11 = load i32, i32* @current_entry, align 4
  %12 = call i32 @JIT_EMIT_MOVE_L(i32 %11)
  %13 = load i32, i32* @current_entry, align 4
  %14 = call i32 @JIT_EMIT_SET_REGISTER_L(i32 %13, i32 60)
  %15 = load i32, i32* @current_entry, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @FAULT_STATUS_IN_DATA, align 4
  %18 = load i32, i32* @FAULT_STATUS_RW_READ, align 4
  %19 = or i32 %17, %18
  %20 = call i32 @JIT_EMIT_CHECK_ALIGNED_SP(i32 %15, i32 %16, i32 %19)
  %21 = load i32, i32* @current_entry, align 4
  %22 = call i32 @JIT_EMIT_POP_L(i32 %21)
  %23 = load i32, i32* @current_entry, align 4
  %24 = load i32, i32* @reg0, align 4
  %25 = add nsw i32 8, %24
  %26 = mul nsw i32 %25, 4
  %27 = call i32 @JIT_EMIT_SET_REGISTER_L(i32 %23, i32 %26)
  %28 = load i32, i32* @current_entry, align 4
  %29 = call i32 @JIT_EMIT_ADD_CYCLES(i32 %28, i32 12)
  ret i32 0
}

declare dso_local i32 @JIT_EMIT_GET_OP1_REGISTER(i32, i32) #1

declare dso_local i32 @JIT_EMIT_MOVE_L(i32) #1

declare dso_local i32 @JIT_EMIT_SET_REGISTER_L(i32, i32) #1

declare dso_local i32 @JIT_EMIT_CHECK_ALIGNED_SP(i32, i32, i32) #1

declare dso_local i32 @JIT_EMIT_POP_L(i32) #1

declare dso_local i32 @JIT_EMIT_ADD_CYCLES(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
